# my-trand-news

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: topics.yml
docs/: operations.md
scripts/: prepare_daily_for_codex_summary.sh  render_daily_with_summary_and_push.sh  run_daily.sh  run_daily_and_push.sh
src/trend_news/: __init__.py  cli.py  config.py  feeds.py  insights.py  logging_config.py  mailer.py  models.py  pdf.py  storage.py  text.py
tests/: test_config.py  test_feeds.py  test_insights.py  test_mailer.py
